--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.7.0",
     "@hookform/resolvers": "^5.0.1",
+    "@tanstack/react-query": "^5.75.2",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "inputmask": "^5.0.9",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
@@ -19,13 +22,13 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "sass": "^1.87.0",
-    "zod": "^3.24.3",
+    "zod": "^3.24.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/inputmask": "^5.0.7",
-    "@types/node": "^20",
+    "@types/node": "^20.17.32",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
